--- a/src/WebUI/appsettings.Development.json
+++ b/src/WebUI/appsettings.Development.json
@@ -1,4 +1,14 @@
 {
+  "AngularSpaBaseUrl": "http://localhost:5201",
+  "AppMode": "Angular",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=ReduxArchitechtureDb;Persist Security Info=True;User ID=rafsan;Password=RH@mssql#2022;MultipleActiveResultSets=True"
+  },
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -6,10 +16,6 @@
       "Microsoft": "Information"
     }
   },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
-  },
-  "SpaBaseUrl": "http://localhost:5200"
+  "ReactSpaBaseUrl": "http://localhost:5202",
+  "UseInMemoryDatabase": false
 }
