--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,19 +1,22 @@
 {
-  "UseInMemoryDatabase": true,
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ReduxArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=ReduxArchitectureDb;Integrated Security=True;MultipleActiveResultSets=True;"
+  },
+  "IdentityServer": {
+    "Clients": {
+      "ReduxArchitecture.AngularApp": {
+        "Profile": "IdentityServerSPA"
+      },
+      "ReduxArchitecture.ReactApp": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "IdentityServer": {
-    "Clients": {
-      "ReduxArchitecture.WebUI": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
-  "AllowedHosts": "*"
+  "UseInMemoryDatabase": false
 }
