--- a/src/WebUI/Properties/launchSettings.json
+++ b/src/WebUI/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61846",
-      "sslPort": 44312
+      "applicationUrl": "http://localhost:4999",
+      "sslPort": 5200
     }
   },
   "profiles": {
@@ -19,22 +19,26 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTPS_PORT": "5200",
+        "ASPNETCORE_URLS": "https://+:5200;http://+:4998",
         "DOTNET_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5200;http://localhost:4998"
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "UseInMemoryDatabase": "true",
-        "ASPNETCORE_HTTPS_PORT": "5001",
-        "ASPNETCORE_URLS": "https://+:5001;http://+:5000"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTPS_PORT": "5200",
+        "ASPNETCORE_URLS": "https://+:5200;http://+:4998",
+        "UseInMemoryDatabase": "true"
       },
-      "httpPort": 5000,
+      "httpPort": 4998,
       "useSSL": true,
-      "sslPort": 5001
+      "sslPort": 5200
     }
   }
 }
