--- a/src/WebUI/appsettings.Production.json
+++ b/src/WebUI/appsettings.Production.json
@@ -1,12 +1,4 @@
 {
-  "UseInMemoryDatabase": false,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
   "IdentityServer": {
     "Key": {
       "Type": "Store",
@@ -14,5 +6,13 @@
       "StoreLocation": "CurrentUser",
       "Name": "CN=MyApplication"
     }
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  },
+  "UseInMemoryDatabase": false
 }
