Configured Angular App

--- a/src/WebUI/NgApp/angular.json
+++ b/src/WebUI/NgApp/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ReduxArchitecture.WebUI": {
+    "ReduxArchitecture.AngularApp": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ReduxArchitecture.WebUI:build"
+            "browserTarget": "ReduxArchitecture.AngularApp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ReduxArchitecture.WebUI:build:production"
+              "browserTarget": "ReduxArchitecture.AngularApp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ReduxArchitecture.WebUI:build"
+            "browserTarget": "ReduxArchitecture.AngularApp:build"
           }
         },
         "test": {
@@ -141,7 +141,7 @@
         }
       }
     },
-    "ReduxArchitecture.WebUI-e2e": {
+    "ReduxArchitecture.AngularApp-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -149,7 +149,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ReduxArchitecture.WebUI:serve"
+            "devServerTarget": "ReduxArchitecture.AngularApp:serve"
           }
         },
         "lint": {
@@ -164,5 +164,5 @@
       }
     }
   },
-  "defaultProject": "ReduxArchitecture.WebUI"
+  "defaultProject": "ReduxArchitecture.AngularApp"
 }
