implemented redux in angular app

--- a/src/WebUI/NgApp/package.json
+++ b/src/WebUI/NgApp/package.json
@@ -12,6 +12,10 @@
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "1.2.30",
     "@fortawesome/free-solid-svg-icons": "5.14.0",
+    "@ngrx/effects": "12.5.1",
+    "@ngrx/router-store": "12.5.1",
+    "@ngrx/store": "12.5.1",
+    "@ngrx/store-devtools": "12.5.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
